--- a/index.html
+++ b/index.html
@@ -107,7 +107,38 @@
         <p class="h3 join__item text-center"><span class="join__number text-success  hidden-lg">06</span>продажа с новыми моделями </p>
         <p class="h3 join__item text-center"><span class="join__number text-success  hidden-lg">07</span>на выходе <b>доход от 30% </b> с девелоперского проекта</p>
 
-      </div>  
+      </div> 
+      <button type="button" class="btn btn__join btn-primary "><span class="h2 text-uppercase">присоединяйтесь к нам</span></button>
+      <p class="h1 text-success text-uppercase text-center">и вы не от кого не зависите!</p>
+    </div>
+
+    <div class="container-fluid money  ">
+      <h2 class="h2 text-center text-uppercase">Создание и реализация <br><br> девелоперских проектов</h2>
+      <div class="container-fluid money__list">
+        <div class="col-sm-4 col-md-4  col-lg-2 col-sm-offset-1 col-md-offset-2 col-lg-offset-1  money__item"><b class="money__number">01</b>
+          300 000 рублей – вступительный взнос, который позволяет Вам
+          присоединиться к сообществу девелоперов, а также получить
+          инструменты для развития бизнеса.</div>
+        <div class="col-sm-4 col-md-4 col-lg-2 money__item col-sm-offset-2 col-md-offset-2 col-lg-offset-2"><b class="money__number">02</b>
+          20 000 рублей (Роялти) – 
+          Полностью поддержим Вас на всех этапах бизнеса, обучим работе со всеми инструментами.
+        </div>
+        <div class="col-sm-4 col-md-4 col-lg-2 money__item col-sm-offset-1 col-md-offset-2 col-lg-offset-2"><b class="money__number">03</b> 
+          Вы пользуетесь тендерной площадкой по всему
+          необходимому: по строителям, поставке материалов,
+          каталогом проектов.</div>
+        <div class="col-sm-4 col-md-4 col-lg-2 money__item col-sm-offset-2 col-md-offset-1 col-lg-offset-3"><b class="money__number">04</b>
+          Предоставляем лэндинги и инструменты для продажи
+          девелоперских объектов и привлечения клиентов на всех
+          стадиях.</div>
+        <div class="col-sm-4 col-md-4 col-lg-2 money__item col-sm-offset-4 col-md-offset-4 
+        col-lg-offset-2"><b class="money__number">05</b>
+          Участие в бизнесе с постоянным доходом.
+        </div>
+      </div>
+      <p class="h2 text-center text-uppercase">формируем ликвидные проекты,которые легко  
+        продавать в условиях кризиса!</p>
+
     </div>
 
     
