--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p class="h3 join__item text-center"><span class="join__number text-success  hidden-lg">07</span>на выходе <b>доход от 30% </b> с девелоперского проекта</p>
 
       </div> 
-      <button type="button" class="btn btn__join btn-primary "><span class="h2 text-uppercase">присоединяйтесь к нам</span></button>
+      <a type="button" class="btn btn__join btn-primary h2 text-uppercase"><span class="btn__join_span">присоединяйтесь к нам</span></a>
       <p class="h1 text-success text-uppercase text-center">и вы не от кого не зависите!</p>
     </div>
 
@@ -138,7 +138,15 @@
       </div>
       <p class="h2 text-center text-uppercase">формируем ликвидные проекты,которые легко  
         продавать в условиях кризиса!</p>
+    </div>
 
+    <div class="container advantages text-center">
+      <h2 class="advantages__title text-uppercase">Ваш бизнес – это часть нашего бизнеса!</h2>
+      <p class="advantages__item advantages__item_1">Стартовые инвестиции от 300 000 ₽</p>
+      <p class="advantages__item advantages__item_2">Высокий средний чек от 3 000 000 ₽</p>
+      <p class="advantages__item advantages__item_3">Оборот в месяц от 2 000 000 ₽</p>
+      <p class="advantages__item advantages__item_4">Масштабные девелоперские проекты</p>
+      <p class="advantages__item advantages__item_5">Cроки окупаемости от 1 месяца</p>
     </div>
 
     
