--- a/index.html
+++ b/index.html
@@ -142,7 +142,16 @@
 
     <div class="container advantages text-center">
       <h2 class="advantages__title text-uppercase">Ваш бизнес – это часть нашего бизнеса!</h2>
+
+
       <p class="advantages__item advantages__item_1">Стартовые инвестиции от 300 000 ₽</p>
+      <div class="romb1"></div>
+      <div class="romb2"></div>
+      <div class="romb3"></div>
+      <div class="romb4"></div>
+      <div class="romb5"></div>
+      <div class="line1"></div>
+      <div class="line1"></div>
       <p class="advantages__item advantages__item_2">Высокий средний чек от 3 000 000 ₽</p>
       <p class="advantages__item advantages__item_3">Оборот в месяц от 2 000 000 ₽</p>
       <p class="advantages__item advantages__item_4">Масштабные девелоперские проекты</p>
